--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <form class="sections-wrapper">
-    <section class="regular-generate">
+    <section class="generate">
       <label for="qrContent" class="body-s">Enter QR Code Content:</label>
       <input type="text" id="qrContent" name="qrContent" placeholder="Enter content for QR code"
         aria-label="QR code content" value="https://ap.cx/" class="input qrcode-input">
@@ -18,6 +18,7 @@
       </div>
       <button type="button" id="generateBtn" aria-label="Generate QR code" data-appearance="primary">Generate QR
         Code</button>
+        <div class="body-s btn-note">❤️ Like this plugin</div>
     </section>
     <section class="extra-options">
       <div class="select-container">
