add version and simplify wording

--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 <body>
   <form class="sections-wrapper">
     <section class="generate">
-      <label for="qrContent" class="body-s">Enter QR Code Content:</label>
+      <label for="qrContent" class="body-s">Content:</label>
       <input type="text" id="qrContent" name="qrContent" placeholder="Enter content for QR code"
         aria-label="QR code content" value="https://ap.cx/" class="input qrcode-input">
       <div class="preview-container">
         <div id="app" class="svg-preview"></div>
       </div>
-      <button type="button" id="generateBtn" aria-label="Generate QR code" data-appearance="primary">Generate QR
-        Code</button>
-        <div class="body-s btn-note">❤️ Like this plugin</div>
+      <button type="button" id="generateBtn" aria-label="Generate QRcode" data-appearance="primary">Generate QRcode</button>
+        <div class="body-s btn-note">v 1.0.2</div>
     </section>
     <section class="extra-options">
       <div class="select-container">
-        <label for="correctionLevel" class="body-s">Select QR Code Correction Level</label>
+        <label for="correctionLevel" class="body-s">Select Correction Level</label>
         <select id="correctionLevel" name="correctionLevel" class="select">
           <option value="L">Low (7%)</option>
           <option value="M" selected>Medium (15%)</option>
