--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="preview-container">
         <div id="app" class="svg-preview"></div>
       </div>
-      <button type="button" id="generateBtn" aria-label="Generate QRcode" data-appearance="primary">Generate QRcode</button>
+      <button type="button" id="generateBtn" aria-label="Generate QR Code" data-appearance="primary">Generate QR Code</button>
         <div class="body-s btn-note">v 1.0.2</div>
     </section>
     <section class="extra-options">
