--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <form class="sections-wrapper">
     <section class="generate">
-      <label for="qrContent" class="body-s">Content:</label>
+      <label for="qrContent" class="body-s">Content</label>
       <input type="text" id="qrContent" name="qrContent" placeholder="Enter content for QR code"
         aria-label="QR code content" value="https://ap.cx/" class="input qrcode-input">
       <div class="preview-container">
