add energy link

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <div class="preview-container">
         <div id="app" class="svg-preview"></div>
       </div>
-      <button type="button" id="generateBtn" aria-label="Generate QR Code" data-appearance="primary">Generate QR Code</button>
-        <div class="body-s btn-note">v 1.0.2</div>
+      <button type="button" id="generateBtn" aria-label="Generate QR Code" data-appearance="primary">Generate QR
+        Code</button>
+      <div class="body-s btn-note">v 1.0.2 made with 💥 by <a href="https://ap.cx/" target="_blank" rel="noopener noreferrer">Thierry C.</a></div>
     </section>
     <section class="extra-options">
       <div class="select-container">
